# voici

./: .eslintignore  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  environment.yml  package.json  pyproject.toml  readthedocs.yml  tsconfig.eslint.json
.github/: pull_request_template.md
.github/workflows/: check-release.yml  frontend.yml  main.yml  rtd-preview.yml  update_playwright_references.yaml
demo/: environment.yml  jupyter_lite_config.json  voici.ipynb
demo/notebooks/: README.md  voici.ipynb
demo/notebooks/local_module/: data_utils.py  helpers.py  local_imports.ipynb
demo/notebooks/widgets/: bqplot.ipynb  ipycanvas.ipynb
demo/widgets/: bqplot.ipynb
docs/: conf.py  configuration.md  deploy.md  environment.yml  index.md  install.md
docs/source/: conf.py  deploy.rst  index.rst  install.rst
notebooks/: test.ipynb  voici.ipynb
notebooks/widgets/: bqplot.ipynb  ipycanvas.ipynb
python/voici/: README.md  pyproject.toml
python/voici-core/: .yarnrc.yml  LICENSE  README.md  package.json  pyproject.toml  setup.py  tsconfigbase.json
python/voici-core/voici_core/: __main__.py  _version.py  addon.py  app.py  exporter.py  tree_exporter.py
python/voici/voici/: __init__.py
scripts/: bump-version.py
tests/: environment.yml  test_app.py
tests/notebooks/: environment.yml
ui-tests/: package.json  playwright.config.js
ui-tests/tests/: voici.test.ts
voici/: __main__.py  _version.py  addon.py  app.py  exporter.py  tree_exporter.py  utils.py  voilite_tree_exporter.py
voici/static/: index.html
