[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.5.0,<2"]

[project]
name = "voici-root"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]

[tool.hatch.version]
path = "python/voici/voici/_version.py"

[tool.jupyter-releaser]
skip = [ "check-python" ]

[tool.jupyter-releaser.options]
python_packages = [
    "python/voici:voici",
    "python/voici-core:voici-core",
]

[tool.check-wheel-contents]
ignore = ["W002"]
